se hicieron mejoras al chat bot